--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-google-generativeai>=0.7.0
 streamlit
+google-generativeai
 opencv-python-headless
 numpy
-pandas
 Pillow
-altair
-pydeck
+pandas
 gspread
 oauth2client
+altair
+reportlab
+
